--- a/alexa-app/src/App.css
+++ b/alexa-app/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: start;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #37475a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-start;
+  padding-top: 10vh;
+  font-size: calc(20px + 2vmin);
+  color: #ffffff;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+hr {
+  color:#ffffff;
+  display: block;
+  height: 3px;
+  width: 50%;
+  background-color: #ffffff;
 }
